[gd_scene load_steps=5 format=3 uid="uid://dxuvwd147qy3x"]

[ext_resource type="Script" path="res://scenes/UI/quest_menu/quest_menu.gd" id="1_0ox8e"]
[ext_resource type="PackedScene" uid="uid://mq7yctjn6ipg" path="res://scenes/UI/quest_menu/general_progress/general_progress.tscn" id="1_50vrd"]
[ext_resource type="PackedScene" uid="uid://cgsap5hotq1nx" path="res://scenes/UI/quest_menu/quest_progress/quest_progress.tscn" id="2_y52n5"]
[ext_resource type="PackedScene" uid="uid://c2a0bjwds08kr" path="res://scenes/UI/quest_menu/quest_panel/quest_panel.tscn" id="3_sqinp"]

[node name="QuestMenu" type="MarginContainer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -648.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("1_0ox8e")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="GeneralProgress" parent="PanelContainer/HBoxContainer" instance=ExtResource("1_50vrd")]
unique_name_in_owner = true
layout_mode = 2

[node name="QuestProgress" parent="PanelContainer/HBoxContainer" instance=ExtResource("2_y52n5")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="QuestPanel" parent="PanelContainer/HBoxContainer" instance=ExtResource("3_sqinp")]
unique_name_in_owner = true
layout_mode = 2
